@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.jupiterbroadcasting"
        name="Jupiter Broadcasting"
-       version="3.0.6"
+       version="3.1.0"
        provider-name="Rob Loach">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
