@@ -63,6 +63,9 @@
   <string id="30221">Show description</string>
   -->
 
+  <string id="30021">Tech Talk Today</string>
+  <string id="30220">Daily coverage of the latest technology-related headlines.</string>
+
   <!-- Settings -->
   <string id="30100">General</string>
   <string id="30101">Quality</string>
