@@ -1,8 +1,11 @@
+[B]Version 3.1.0 June 5th, 2014[/B]
+- New Show: Tech Talk Today
+
 [B]Version 3.0.6 April 6th, 2014[/B]
--Add new logo for Linux Action Show and Linux Unplugged
+- Add new logo for Linux Action Show and Linux Unplugged
 
 [B]Version 3.0.5: April 3rd, 2014[/B]
--Change Logo to new Jupiter Broadcasting Logo
+- Change Logo to new Jupiter Broadcasting Logo
 
 [B]Version 3.0.4: March 23rd, 2014[/B]
 - Updated documentation
